js/js.translator/testData/incremental/invalidationWithPL/removeClassUsedFromConsumer/lib1/l1.1.kt
package sample

fun placeholder(): Int = -1
